[project]
name = "mentor-bahasa-inggris-virtual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.12.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "telegramify-markdown>=1.2.0",
]
